--- a/browse.html
+++ b/browse.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="browse_styles.css">
 </head>
 <body>
-    <section class="video-showcase">
-        <div>
-            <img class="logo" src="images/logo.png" alt="logo">
-        </div>
+    <section class="showcase">
+        <header>
+            <a href="#"><img class="logo" src="images/logo.png" alt="logo"></a>
+            <div class="toggle"></div>
+        </header>
 
         <video src="images/movie.mp4" muted loop autoplay></video>
 
         <div class="overlay"></div>
 
         <div class="text">
-            <h2>Watch Now</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam in quas nobis consectetur! Dicta eligendi vel corrupti, iure quia voluptas! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores, in, assumenda corrupti quas, unde nam debitis officia cumque omnis molestias nobis delectus doloremque mollitia atque adipisci iure ratione consectetur? Distinctio.</p>
+            <h3>Watch Murder Now</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus aperiam modi vitae corrupti illo. Exercitationem itaque quisquam velit perspiciatis molestiae pariatur porro eaque maxime quos!</p>
             <a href="#">Play</a>
         </div>
     </section>
