--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
     <header class="showcase">
         <div class="showcase-top">
-            <img class="logo" src="images/logo.png" alt="logo">
-            <a href="#">
-                <button class="btn">Sign In</button>
+            <a href="#"><img class="logo" src="images/logo.png" alt="logo"></a>
+            <a href="signIn.html">
+                <button type="button" class="btn">Sign In</button>
             </a>
         </div>
-        <!-- <div class="overlay"></div> -->
+        
         <div class="showcase-content">
             <h1>Unlimited movies, TV </h1> 
             <h1> shows and more.</h1>
@@ -33,7 +33,9 @@
 
     </header>
 
+    <hr class="hr">
 
+    
     <script src="index.js"></script>
 </body>
 </html>
