--- a/signIn.html
+++ b/signIn.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="showcase">
+    <header class="showcase" style="height: 140vh;">
         <div class="showcase-top">
             <img class="logo" src="images/logo.png" alt="logo">
         </div>
@@ -55,10 +55,37 @@
             </div>
         </div>
 
+        <div class="footer">
+            <div class="foot-ques">
+                <p>Questions? Call 000-800-040-1843</p>
+            </div>
+            <div class="foot-items">
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Cookie Preferences</a></li>
+                </ul>
+            </div>
+            <div class="foot-items">
+                <ul>
+                    <li><a href="#">Help Centre</a></li>
+                    <li><a href="#">Corporate Information</a></li>
+                </ul>
+            </div>
+            <div class="foot-items">
+                <ul>
+                    <li><a href="#">Terms of Use</a></li>
+                </ul>
+            </div>
+            <div class="foot-items">
+                <ul>
+                    <li><a href="#">Privacy</a></li>
+                </ul>
+            </div>
+        </div>
     </header>
 
-    <footer>
-        <div>
+    <!-- <footer>
+        <div class="foot-ques">
             <p>Questions? Call 000-800-040-1843</p>
         </div>
         <div class="foot-items">
@@ -83,7 +110,7 @@
                 <li><a href="#">Privacy</a></li>
             </ul>
         </div>
-    </footer>
+    </footer> -->
 
     <script src="index.js"></script>
 </body>
