--- a/browse.html
+++ b/browse.html
@@ -10,21 +10,26 @@
 <body>
     <section class="showcase">
         <header>
-            <a href="#"><img class="logo" src="images/logo.png" alt="logo"></a>
-            <div class="toggle"></div>
+            <a href="index.html"><img class="logo" src="images/logo.png" alt="logo"></a>
         </header>
 
-        <video src="images/movie.mp4" muted loop autoplay></video>
+        <video src="images/movie.mp4" muted autoplay></video>
 
-        <div class="overlay"></div>
+        <!-- <div class="overlay"></div> -->
 
         <div class="text">
             <h3>Watch Murder Now</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus aperiam modi vitae corrupti illo. Exercitationem itaque quisquam velit perspiciatis molestiae pariatur porro eaque maxime quos!</p>
-            <a href="#">Play</a>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, assumenda. Quasi facilis mollitia illo et, consectetur tenetur nisi nihil reprehenderit nulla dolorum, consequatur numquam eum sunt obcaecati in quos, sequi harum nesciunt dignissimos. Nemo laboriosam, enim veritatis a minima quaerat.</p>
+            <a class="btn" href="#">Play</a>
+        </div>
+
+        <div class="video-container">
+            <span class="close">X</span>
+            <video src="images/movie.mp4" controls></video>
         </div>
     </section>
 
-    <script src="index.js"></script>
+
+    <script src="browse.js"></script>
 </body>
 </html>
